[gd_scene load_steps=5 format=2]

[ext_resource path="res://Actor/Actor.gd" type="Script" id=1]
[ext_resource path="res://cards/CardSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://cards/CardPosition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actor/AcotorHUD.tscn" type="PackedScene" id=4]

[node name="Actor" type="Node2D"]
script = ExtResource( 1 )

[node name="CardSpawner" parent="." instance=ExtResource( 2 )]

[node name="P1" parent="CardSpawner" instance=ExtResource( 3 )]
position = Vector2( -63, 0 )

[node name="P2" parent="CardSpawner" instance=ExtResource( 3 )]
position = Vector2( 63, 0 )

[node name="ActorHUD" parent="." instance=ExtResource( 4 )]

[node name="RestTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
